@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to the {project-name} by release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+Bug Fixes::
+
+* place block image in SVG format in correct column when align is left and page columns are enabled (#2241)
+
 == 2.1.0 (2022-06-11) - @mojavelinux
 
 Enhancements::
